5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4382/executions/1633_2923.log
== SUBMITION (2019-04-02 18:22:27) 
-- CODE:
Q0= 1500
t=36
Qf=q0*(1+j)**t
-- EXECUTION TIME:
0.209937
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1633/2923/main.py", line 3, in <module>
    Qf=q0*(1+j)**t
NameError: name 'q0' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:22:30) 
-- CODE:
Q0= 1500
t=36
Qf=q0*(1+j)**t
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    Qf=q0*(1+j)**t
NameError: name 'q0' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:22:40) 
-- CODE:
Q0= 1500
t=36
Qf=Q0*(1+j)**t
-- EXECUTION TIME:
0.211415
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1633/2923/main.py", line 3, in <module>
    Qf=Q0*(1+j)**t
NameError: name 'j' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:22:41) 
-- CODE:
Q0= 1500
t=36
Qf=Q0*(1+j)**t
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    Qf=Q0*(1+j)**t
NameError: name 'j' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:23:19) 
-- CODE:
j=?
Q0= 1500
t=36
Qf=Q0*(1+j)**t
-- EXECUTION TIME:
0.197172
-- ERROR:
  File "/home/codebench/codes/1633/2923/main.py", line 1
    j=?
      ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:23:20) 
-- CODE:
j=?
Q0= 1500
t=36
Qf=Q0*(1+j)**t
-- ERROR:
File "XXXX", line 1
    j=?
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:23:41) 
-- CODE:
j=("juros")
Q0= 1500
t=36
Qf=Q0*(1+j)**t
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Qf=Q0*(1+j)**t
TypeError: unsupported operand type(s) for +: 'int' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:25:04) 
-- CODE:
j=input(("juros"))
Q0= 1500
t=36
Qf=int(input(Q0*(1+j)**t))
print(round(Qf,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Qf=int(input(Q0*(1+j)**t))
TypeError: unsupported operand type(s) for +: 'int' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:25:08) 
-- CODE:
j=input(("juros"))
Q0= 1500
t=36
Qf=int(input(Q0*(1+j)**t))
print(round(Qf,2))
-- EXECUTION TIME:
0.145429
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1633/2923/main.py", line 4, in <module>
    Qf=int(input(Q0*(1+j)**t))
TypeError: unsupported operand type(s) for +: 'int' and 'str'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:25:11) 
-- CODE:
j=input(("juros"))
Q0= 1500
t=36
Qf=int(input(Q0*(1+j)**t))
print(round(Qf,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Qf=int(input(Q0*(1+j)**t))
TypeError: unsupported operand type(s) for +: 'int' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:25:16) 
-- CODE:
j=input(("juros"))
Q0= 1500
t=36
Qf=int(input(Q0*(1+j)**t))
print(round(Qf,2))
-- EXECUTION TIME:
0.146559
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1633/2923/main.py", line 4, in <module>
    Qf=int(input(Q0*(1+j)**t))
TypeError: unsupported operand type(s) for +: 'int' and 'str'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:25:34) 
-- CODE:
j=("juros")
Q0= 1500
t=36
Qf=int(input(Q0*(1+j)**t))
print(round(Qf,2))
-- EXECUTION TIME:
0.181175
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1633/2923/main.py", line 4, in <module>
    Qf=int(input(Q0*(1+j)**t))
TypeError: unsupported operand type(s) for +: 'int' and 'str'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:25:34) 
-- CODE:
j=("juros")
Q0= 1500
t=36
Qf=int(input(Q0*(1+j)**t))
print(round(Qf,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Qf=int(input(Q0*(1+j)**t))
TypeError: unsupported operand type(s) for +: 'int' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:25:49) 
-- CODE:
j=input(("juros"))
Q0= 1500
t=36
Qf=int(input(Q0*(1+j)**t))
print(round(Qf,2))
-- EXECUTION TIME:
0.212643
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1633/2923/main.py", line 4, in <module>
    Qf=int(input(Q0*(1+j)**t))
TypeError: unsupported operand type(s) for +: 'int' and 'str'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:25:50) 
-- CODE:
j=input(("juros"))
Q0= 1500
t=36
Qf=int(input(Q0*(1+j)**t))
print(round(Qf,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Qf=int(input(Q0*(1+j)**t))
TypeError: unsupported operand type(s) for +: 'int' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:27:17) 
-- CODE:
j=input(("juros"))
Q0= 1500
t=36
j= j%Q0
Qf=int(input(Q0*(1+j)**t))
print(round(Qf,2))
-- EXECUTION TIME:
0.114774
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1633/2923/main.py", line 4, in <module>
    j= j%Q0
TypeError: not all arguments converted during string formatting

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:27:19) 
-- CODE:
j=input(("juros"))
Q0= 1500
t=36
j= j%Q0
Qf=int(input(Q0*(1+j)**t))
print(round(Qf,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    j= j%Q0
TypeError: not all arguments converted during string formatting
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:27:51) 
-- CODE:
Q0= 1500
t=36
j= j%Q0
Qf=int(input(Q0*(1+j)**t))
print(round(Qf,2))
-- EXECUTION TIME:
0.145224
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1633/2923/main.py", line 3, in <module>
    j= j%Q0
NameError: name 'j' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:27:53) 
-- CODE:
Q0= 1500
t=36
j= j%Q0
Qf=int(input(Q0*(1+j)**t))
print(round(Qf,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    j= j%Q0
NameError: name 'j' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:28:37) 
-- CODE:
j=input(j)
Q0= 1500
t=36
j= j%Q0
Qf=int(input(Q0*(1+j)**t))
print(round(Qf,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    j=input(j)
NameError: name 'j' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:29:03) 
-- CODE:
j=input("taxa de juros")
Q0= 1500
t=36
j= j%Q0
Qf=int(input(Q0*(1+j)**t))
print(round(Qf,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    j= j%Q0
TypeError: not all arguments converted during string formatting
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:29:06) 
-- CODE:
j=input("taxa de juros")
Q0= 1500
t=36
j= j%Q0
Qf=int(input(Q0*(1+j)**t))
print(round(Qf,2))
-- EXECUTION TIME:
0.205953
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1633/2923/main.py", line 4, in <module>
    j= j%Q0
TypeError: not all arguments converted during string formatting

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:29:41) 
-- CODE:
j=input("taxa de juros")
Q0= 1500
t= 36
j= j%Q0
Qf=str(input(Q0*(1+j)**t))
print(round(Qf,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    j= j%Q0
TypeError: not all arguments converted during string formatting
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:29:55) 
-- CODE:
j=input("taxa de juros")
Q0= 1500
t= 36
j= j%Q0
Qf= int(input(Q0*(1+j)**t))
print(round(Qf,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    j= j%Q0
TypeError: not all arguments converted during string formatting
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:32:19) 
-- CODE:
j=input("taxa de juros")
Q0= 1500
t= 36
j= j%Q0
Qf= int(input(Q0*(1+j)**t))
print(round(Qf,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    j= j%Q0
TypeError: not all arguments converted during string formatting
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:32:27) 
-- CODE:
j=input("taxa de juros")
Q0= 1500
t= 36
j= j%Q0
Qf= int(input(Q0*(1+j)**t))
print(round(Qf,2))
-- EXECUTION TIME:
0.173168
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1633/2923/main.py", line 4, in <module>
    j= j%Q0
TypeError: not all arguments converted during string formatting

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:36:52) 
-- CODE:
j=int(input("taxa de juros"))
Q0= 1500
t= 36
j= j%Q0
Qf= int(input(Q0*(1+j)**t))
print(round(Qf,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    j=int(input())
ValueError: invalid literal for int() with base 10: '0.29'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:36:54) 
-- CODE:
j=int(input("taxa de juros"))
Q0= 1500
t= 36
j= j%Q0
Qf= int(input(Q0*(1+j)**t))
print(round(Qf,2))
-- EXECUTION TIME:
0.193854
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1633/2923/main.py", line 1, in <module>
    j=int(input())
ValueError: invalid literal for int() with base 10: '0.29'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:37:44) 
-- CODE:
j=int(input("taxa de juros"))
Q0= 1500
t= 36
j= j%Q0
Qf= int(input(Q0*(1+j)**t))
print(round(Qf,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    j=int(input())
ValueError: invalid literal for int() with base 10: '0.29'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:39:08) 
-- CODE:
j=int(input("taxa de juros"))
Q0= 1500
t= 36
j=int(input(j%Q0))
Qf= int(input(Q0*(1+j)**t))
print(round(Qf,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    j=int(input())
ValueError: invalid literal for int() with base 10: '0.29'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:39:10) 
-- CODE:
j=int(input("taxa de juros"))
Q0= 1500
t= 36
j=int(input(j%Q0))
Qf= int(input(Q0*(1+j)**t))
print(round(Qf,2))
-- EXECUTION TIME:
0.148365
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1633/2923/main.py", line 1, in <module>
    j=int(input())
ValueError: invalid literal for int() with base 10: '0.29'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:40:29) 
-- CODE:

Q0= 1500
t= 36
j=int(input(j%Q0))
Qf= int(input(Q0*(1+j)**t))
print(round(Qf,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    j=int(input(j%Q0))
NameError: name 'j' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:42:13) 
-- CODE:
j= float(input())
Q0= 1500
t= 36
j= float(input(j%Q0))
Qf= float(input(Q0*(1+j)**t))
print(round(Qf,2))
-- EXECUTION TIME:
0.179494
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1633/2923/main.py", line 4, in <module>
    j= float(input(j%Q0))
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:42:14) 
-- CODE:
j= float(input())
Q0= 1500
t= 36
j= float(input(j%Q0))
Qf= float(input(Q0*(1+j)**t))
print(round(Qf,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    j= float(input(j%Q0))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:42:17) 
-- CODE:
j= float(input())
Q0= 1500
t= 36
j= float(input(j%Q0))
Qf= float(input(Q0*(1+j)**t))
print(round(Qf,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    j= float(input(j%Q0))
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:42:47) 
-- CODE:
j= float(input())
Q0= 1500
t= 36
j= float(input(j%Q0))
Qf= float(input(Q0*(1+j)**t))
print(round(Qf,2))
-- EXECUTION TIME:
0.108976
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1633/2923/main.py", line 4, in <module>
    j= float(input(j%Q0))
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:43:29) 
-- CODE:
j= float(input())
Qf= float(input())
Q0= 1500
t= 36
j= float(input(j%Q0))
Qf= float(input(Q0*(1+j)**t))
print(round(Qf,2))
-- EXECUTION TIME:
0.154008
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1633/2923/main.py", line 2, in <module>
    Qf= float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:43:31) 
-- CODE:
j= float(input())
Qf= float(input())
Q0= 1500
t= 36
j= float(input(j%Q0))
Qf= float(input(Q0*(1+j)**t))
print(round(Qf,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    Qf= float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:44:46) 
-- CODE:
j= float(input())
Qf= float(input())
Q0= 1500
t= 36
j= float(input(j%Q0))
Qf= float(input(Q0*(1+j)**t))
print(round(Qf,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    Qf= float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:45:20) 
-- CODE:
j= float(input("juros"))
Qf= float(input("valor final"))
Q0= 1500
t= 36
j= float(input(j%Q0))
Qf= float(input(Q0*(1+j)**t))
print(round(Qf,2))
-- EXECUTION TIME:
0.171871
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1633/2923/main.py", line 2, in <module>
    Qf= float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:45:22) 
-- CODE:
j= float(input("juros"))
Qf= float(input("valor final"))
Q0= 1500
t= 36
j= float(input(j%Q0))
Qf= float(input(Q0*(1+j)**t))
print(round(Qf,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    Qf= float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:45:33) 
-- CODE:
j= float(input("juros"))
Qf= float(input("valor final"))
Q0= 1500
t= 36
j= float(input(j%Q0))
Qf= float(input(Q0*(1+j)**t))
print(round(Qf,2))
-- EXECUTION TIME:
0.144535
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1633/2923/main.py", line 2, in <module>
    Qf= float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:46:22) 
-- CODE:
j= float(input("juros"))
Qf= float(input("valor final"))
Q0= 1500
t= 36
j= float(j%Q0)
Qf= float(Q0*(1+j)**t)
print(round(Qf,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    Qf= float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:46:26) 
-- CODE:
j= float(input("juros"))
Qf= float(input("valor final"))
Q0= 1500
t= 36
j= float(j%Q0)
Qf= float(Q0*(1+j)**t)
print(round(Qf,2))
-- EXECUTION TIME:
0.129292
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1633/2923/main.py", line 2, in <module>
    Qf= float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:46:28) 
-- CODE:
j= float(input("juros"))
Qf= float(input("valor final"))
Q0= 1500
t= 36
j= float(j%Q0)
Qf= float(Q0*(1+j)**t)
print(round(Qf,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    Qf= float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 18:46:57) 
-- CODE:
j= float(input("juros"))
Qf= float(input("valor final"))
Q0= 1500
t= 36
j=j%Q0
Qf=Q0*(1+j)**t
print(round(Qf,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    Qf= float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:46:59) 
-- CODE:
j= float(input("juros"))
Qf= float(input("valor final"))
Q0= 1500
t= 36
j=j%Q0
Qf=Q0*(1+j)**t
print(round(Qf,2))
-- EXECUTION TIME:
0.125694
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1633/2923/main.py", line 2, in <module>
    Qf= float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 18:47:37) 
-- CODE:
j= float(input("juros"))
Q0= 1500
t= 36
Qf=Q0*(1+j)**t
print(round(Qf,2))
-- EXECUTION TIME:
0.201362
-- TEST CASE 1:
---- input:
0.29
---- correct output:
14365502.76
---- user output:
14365502.76
-- TEST CASE 2:
---- input:
0.095
---- correct output:
39354.97
---- user output:
39354.97
-- TEST CASE 3:
---- input:
0.134
---- correct output:
138727.07
---- user output:
138727.07
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
